--- a/public/css/output.css
+++ b/public/css/output.css
@@ -756,6 +756,10 @@ select {
   grid-column-start: 1;
 }
 
+.col-start-2 {
+  grid-column-start: 2;
+}
+
 .col-end-10 {
   grid-column-end: 10;
 }
@@ -942,6 +946,18 @@ select {
 
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .block {
